<resources>
    <string name="app_name">Shopping List</string>

    <!-- Menu - main_drawer.xml -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu - main.xml -->
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear list</string>

    <!-- Main content page -->
    <string name="hint">What did you run out of?</string>
    <string name="addProduct">Add</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Group name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_account">Create a new group</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_choose_theme">Choose your theme</string>
    <string-array name="pref_theme_list_titles">
        <item>White</item>
        <item>Green</item>
        <item>Black</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="de_boodschappen_app">The Shopping List</string>
    <string name="credits">By Stefan Pahlplatz</string>
    <string name="placeholdertext">placeholdertext</string>
    <string name="placeholdervalue">11</string>
    <string name="create_group">Create group</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="view_current_list">View current list</string>
    <string name="view_all_products">View all products</string>
    <string name="add_product">Add product</string>
    <string name="settings">Settings</string>
</resources>
