<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createaccount_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="Create account"
        android:textSize="20sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/createaccount_tilayout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/createaccount_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/createaccount_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            app:passwordToggleEnabled="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/createaccount_et_passwordconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/createaccount_et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First name"
            android:inputType="text"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/createaccount_et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last name"
            android:inputType="text"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createaccount_btn_create"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_create_account"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/createaccount_pb_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

</LinearLayout>